# DMHW-Graphs

./: .~lock.vertices.xlsx#  edges.txt  graph.csv  vertices.xlsx
Comba/Norm10/: CMakeLists.txt  main.cpp
Comba/Task-10/: CMakeLists.txt  Geometry.h  main.cpp
Graphs/: europe.csv  naming.csv
Graphs/Task-b/: CMakeLists.txt
Graphs/Task-c/: CMakeLists.txt
Graphs/Task-n/: CMakeLists.txt  main.cpp
Graphs/Task-o/: main.cpp
Graphs/Task-p/: main.cpp
Task-a/: main.cpp
Task-c/: main.cpp
Task-e/: CMakeLists.txt  main.cpp
Task-o/: CMakeLists.txt
Task-p/: CMakeLists.txt
